--- a/code/main_analysis.Rmd
+++ b/code/main_analysis.Rmd
@@ -9,40 +9,67 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 
 knitr::opts_knit$set(root.dir = rprojroot::find_rstudio_root_file())
-
+#this sets wd to root dir
 ```
 
 ## 2023 osmia bioassay 
 
 this will be a test of markdown as a main replacement of scripts for analysis
 
-```{r data and packages}
+```{r data and packages, inclue = FALSE}
 
 library(tidyverse)
+library(rstatix)
 
 df <- read_csv("input/2023_bioassay_datasheets_combined.csv") %>%
   mutate_if(is.character, factor)%>%
-    mutate(
-      splits = if_else(
-        str_count(treatment, '\\S+') > 2,
-        str_c(word(treatment,1,1), word(treatment,2,str_count(treatment,'\\S+')), sep = '\n'),
-        treatment
-      )
-    )
+  filter(!end_date == "remove")
 
 
 ```
 
 
 now lets just make a quick summary of 
-``` {r summary}
+``` {r summary graph}
 
 prop_death <- df %>%
   ggplot()+
-  geom_bar(aes(x=splits, fill=end_status))+
+  geom_bar(aes(x=treatment, fill=end_status), position = "fill")+
   ggtitle("break down of death")+
-  scale_x_discrete(guide = guide_axis(angle = 90))
+  scale_x_discrete(guide = guide_axis(angle = 0),labels = function(x) str_wrap(x, width = 7))+
+  scale_fill_manual(values=c("lightblue4", "red4"))
 prop_death
 
 
 ```
+
+``` {r kruskal wallis}
+
+df %>%
+  kruskal_test(end_status ~ treatment)
+
+
+test <- df %>%
+  dunn_test(end_status ~ treatment)
+
+
+
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
