--- a/code/main_analysis.Rmd
+++ b/code/main_analysis.Rmd
@@ -10,32 +10,36 @@ knitr::opts_chunk$set(echo = TRUE)
 
 knitr::opts_knit$set(root.dir = rprojroot::find_rstudio_root_file())
 
+library(tidyverse)
+library(rstatix)
+
 ```
 
 ## 2023 osmia bioassay 
 
 this will be a test of markdown as a main replacement of scripts for analysis
 
-```{r data and packages}
+```{r data}
 
-library(tidyverse)
-
-df <- read_csv("input/2023_bioassay_datasheets_combined.csv") %>%
-  mutate_if(is.character, factor)%>%
-    mutate(
-      splits = if_else(
+df <- read_csv("input/2023_bioassay_datasheets_combined.csv", skip_empty_rows = TRUE)%>%
+  mutate(end_date = as.Date(end_date, format= "%Y/%m/%d"),
+         start_date= as.Date(start_date, format= "%Y/%m/%d"))%>% # make date a date
+  mutate_if(is.character, factor)%>% # change other chr to factors
+    mutate( # make a column of treatment names with line breaks for better graph labels
+      splits = if_else( 
         str_count(treatment, '\\S+') > 2,
         str_c(word(treatment,1,1), word(treatment,2,str_count(treatment,'\\S+')), sep = '\n'),
         treatment
       )
-    )
+    ) %>%
+  mutate(days_to_event = end_date-start_date) # calculate the days until cocoon or death
 
 
 ```
 
 
 now lets just make a quick summary of 
-``` {r summary}
+``` {r summary graph}
 
 prop_death <- df %>%
   ggplot()+
@@ -45,4 +49,42 @@ prop_death <- df %>%
 prop_death
 
 
+# how long it took each treatment to die
+time_to_death <- df %>%
+  filter(end_status == "dead") %>%
+  ggplot(aes(x=splits, y = days_to_event, color = splits))+
+  geom_point()+
+  geom_boxplot()
+
+# how long it took each treatment to cocoon
+time_to_cocoon <- df %>%
+  filter(end_status == "cocoon") %>%
+  ggplot(aes(x=splits, y = days_to_event, color = splits))+
+  geom_point()+
+  geom_boxplot()
+
 ```
+
+
+
+```{r kw and dunn of death}
+
+df %>%
+  kruskal_test(end_status ~ treatment)
+
+
+test<-df %>%
+  dunn_test(end_status ~ treatment, p.adjust.method = "holm")
+
+```
+
+```{r survival analysis}
+
+library(survival)
+library(ranger)
+library(ggfortify)
+
+
+
+```
+
