--- a/code/main_analysis.Rmd
+++ b/code/main_analysis.Rmd
@@ -33,7 +33,9 @@ library(DescTools) # for dunnets test
 
 ```{r data, echo=FALSE}
 
-df <- read_csv("input/2023_bioassay_datasheets_combined.csv", skip_empty_rows = TRUE)%>%
+rm(list=ls())
+
+survival <- read_csv("input/2023_bioassay_datasheets_combined.csv", skip_empty_rows = TRUE)%>%
   filter(!end_date == "remove")%>%
   mutate(end_date = as.Date(end_date, format= "%Y/%m/%d"),
          start_date= as.Date(start_date, format= "%Y/%m/%d"), # make date a date
@@ -53,7 +55,19 @@ df <- read_csv("input/2023_bioassay_datasheets_combined.csv", skip_empty_rows = 
   mutate(days_to_death = if_else(end_status == "dead", days_to_event, max(days_to_event))) %>% # i need to make a column where survivors live until the last check point, not just to cocoon
   mutate(days_to_death = as.numeric(days_to_death),
          days_to_event = as.numeric(days_to_event))# and finally fix difftime to num
-head(df)
+
+
+
+p_stain <- read_csv("input/pollen_staining.csv") %>% #read in pollen staining data
+  mutate_if(is.character, factor) # change other chr to factors
+
+# then merge the two using sample_id
+
+
+df <- survival%>%
+  left_join(p_stain, by = "sample_id")
+
+
 
 ```
 metadata :
@@ -232,7 +246,32 @@ autoplot(aa_fit)
 
 
 
+# pollen staining
+```{r pollen staining}
 
+#first explore if pollen pre digestion is different across treatments
+
+
+pollen_pre <- read_csv("input/pre_digested_pollen.csv")%>%
+  mutate(day = factor(day),
+         treatment= factor(treatment),
+         source= factor(source))
+
+
+
+
+pollen_pre %>%
+  ggplot()+
+  geom_boxplot(aes(x=day, y=full, color= treatment))+
+  facet_wrap(~source)
+
+
+
+
+
+
+
+```
 
 
 
