--- a/pipeline_quality_16s.Rmd
+++ b/pipeline_quality_16s.Rmd
@@ -44,8 +44,9 @@ cutFs <- sort(list.files(path.cut, pattern = "_R1.fastq.gz", full.names = TRUE))
 cutRs <- sort(list.files(path.cut, pattern = "_R2.fastq.gz", full.names = TRUE))
 
 
-plotQualityProfile(cutFs, aggregate = TRUE)
-plotQualityProfile(cutRs, aggregate = TRUE)
+plotQualityProfile(cutFs[1:3])
+plotQualityProfile(cutRs[1:3])
+
 ```
 
 
@@ -55,6 +56,8 @@ plotQualityProfile(cutRs, aggregate = TRUE)
 filtFs <- file.path(path.cut, "filtered", basename(cutFs))
 filtRs <- file.path(path.cut, "filtered", basename(cutRs))
 
+errF <- learnErrors(filtFs, multithread=TRUE)
+errR <- learnErrors(filtRs, multithread=TRUE)
 
 plotErrors(errF, nominalQ=TRUE)
 plotErrors(errR, nominalQ=TRUE)
@@ -63,7 +66,7 @@ plotErrors(errR, nominalQ=TRUE)
 
 ```{r tracking}
 
-track<-read.csv(file="sequencing_results/16S/track_through_pipe")
+track<-read.csv(file="sequencing_results/16S/track_through_pipe.csv")
 track
 ```
 
