added decontam to pipeline and markdown

--- a/code/analysis_ITS.Rmd
+++ b/code/analysis_ITS.Rmd
@@ -73,3 +73,39 @@ plot_bar(ps.top20, x="treatment", fill="Family") + facet_wrap(~day, scales="free
 
 
 ```
+
+
+```{r contaminants}
+asv_tab <- read.csv("input/its/asv_counts_its.csv")
+
+#set column 1 to row names
+asv_tab<- asv_tab %>%
+  `row.names<-`(., NULL) %>% 
+   column_to_rownames(var = "X")
+
+
+asv_tax <- read.csv("input/its/asv_taxonomy_its.csv")
+
+#set column 1 to row names
+asv_tax<- asv_tax %>%
+  `row.names<-`(., NULL) %>% 
+   column_to_rownames(var = "X")
+
+
+# create vector saying which samples are controls
+vector_for_decontam <- c(rep(TRUE, 1), rep(FALSE, 30))
+
+contam_df <- isContaminant(t(asv_tab), neg=vector_for_decontam)
+
+table(contam_df$contaminant) # identified 6 as contaminants
+
+# getting vector holding the identified contaminant IDs
+contam_asvs <- row.names(contam_df[contam_df$contaminant == TRUE, ])
+
+# in this case its 2 taxa
+asv_tax[row.names(asv_tax) %in% contam_asvs, ]
+
+```
+1 contaminant was found - an unidentified fungi
+
+
